modules/data-modeling/objects/Energy_Audit__c/fields/Account__c.field-meta.xml
<CustomField><fullName>Account__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Account</label><referenceTo>Account</referenceTo><relationshipLabel>Energy Audits</relationshipLabel><relationshipName>Energy_Audits</relationshipName><required>true</required><trackFeedHistory>true</trackFeedHistory><type>Lookup</type></CustomField>