modules/data-modeling/objects/Energy_Audit__c/fields/Annual_Energy_Usage_kWh__c.field-meta.xml
<CustomField><fullName>Annual_Energy_Usage_kWh__c</fullName><inlineHelpText>Usage per square foot.</inlineHelpText><label>Annual Energy Usage (kWh)</label><precision>18</precision><required>true</required><scale>0</scale><trackFeedHistory>true</trackFeedHistory><type>Number</type></CustomField>