modules/data-modeling/objects/Energy_Audit__c/fields/Audit_Notes__c.field-meta.xml
<CustomField><fullName>Audit_Notes__c</fullName><label>Audit Notes</label><length>32768</length><trackFeedHistory>true</trackFeedHistory><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>