modules/data-modeling/objects/Energy_Audit__c/fields/Average_Annual_Electric_Cost__c.field-meta.xml
<CustomField><fullName>Average_Annual_Electric_Cost__c</fullName><inlineHelpText>Annual cost per square foot.</inlineHelpText><label>Average Annual Electric Cost</label><precision>16</precision><required>true</required><scale>2</scale><trackFeedHistory>true</trackFeedHistory><type>Currency</type></CustomField>