modules/data-modeling/objects/Energy_Audit__c/fields/Type_of_Installation__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Installation__c</fullName><label>Type of Installation</label><trackFeedHistory>true</trackFeedHistory><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Rooftop</fullName><default>true</default><label>Rooftop</label></value>
        <value><fullName>Carport</fullName><default>false</default><label>Carport</label></value>
        <value><fullName>Ground Mounted</fullName><default>false</default><label>Ground Mounted</label></value>
    </valueSetDefinition></valueSet>
</CustomField>